[package]
name = "muos-threads"
version = "0.1.0"
edition = "2021"

[dependencies]
muos-syscall = { path = "../muos-syscall" }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
rp235x-hal = { version = "0.3.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"] }
panic-probe = { version = "0.3.2", features = ["defmt", "print-defmt"] }
pio = "0.2.0"
pio-proc = "0.2.0"

defmt = "0.3.10"
defmt-rtt = "0.4.1"

cyw43-min = { path = "../../cyw43-min" }
